filing/css/styles.css
/* ... */
@media only screen and (max-width: 1000px) {
	.anchor {
		display: none;
	}
	/* Mobile Menu */
	.menu .hide {
		display: none;
	}
	.menu {
		display: inline;
	}
	.mobile ul {
		overflow: hidden;
		position: relative;
		margin-top: 20px;
		padding: 20px 0px 30px 0;
		border-top: 1px solid #1a1a1a;
	}
	.mobile a {
		display: block;
		line-height: 1.6em;
	}
	.mobile a i.icon {
		display: block;
		position: absolute;
		right: 64px;
		top: 32px;
	}
	.mobile li.logo {
		padding-top: 80px;
		display: block;
	}
}

@media only screen and (max-width: 900px) {
	body {
		font-size: 14px;
	}
	.container {
		padding: 20px 20px;
	}
	nav ul li {
		font-size: 14px;
	}
	.anchor {
		display: none;
	}
	.URL {
		margin-right: 0%;
	}
	nav a {
		opacity: 1;
	}
	.mobile a i.icon {
		right: 22px;
		top: 22px;
	}
	.home header {
		padding-top: 40vh;
	}
	.work header,
	.about header {
		padding-top: 50vh;
	}
	.home h1 {
		font-size: 20px;
		line-height: 26px;
		max-width: 900px;
		padding-bottom: 20px;
		padding-right: 20px;
		color: #dddddd;
	}
	.home h2 {
		font-weight: 400;
		font-size: 16px;
		line-height: 22px;
		max-width: 900px;
	}
	.home header .opacity {
		opacity: 1;
	}
	.home h1 a,
	.home h2 a {
		opacity: 1;
	}
	.home h1 a {
		text-decoration: underline;
	}
	.home h2 a {
		opacity: 0.8;
		text-decoration: underline;
	}
	.work h1,
	.about h1 {
		font-size: 38px;
		line-height: 48px;
		padding-bottom: 0px;
	}
	.work h2,
	.about h2,
	h2,
	h3 {
		font-size: 20px;
		line-height: 28px;
		padding: 10px 0 10px 0;
		max-width: 615px;
	}
	h2.contactable {
		padding-bottom: 30px;
	}
	.column-100 p.caption {
		padding-bottom: 0px;
	}
	p.employable {
		font-size: 14px;
		line-height: 22px;
	}
	p.intro {
		font-size: 18px;
		line-height: 24px;
	}
	.featured {
		padding-top: 40px;
		font-size: 18px;
		line-height: 1.4em;
	}
	.credit {
		max-width: 360px;
		font-size: 14px;
		line-height: 20px;
	}
	.images {
		padding: 140px 0 70px 0;
	}
	.row,
	.bonus-row {
		display: block;
		max-width: 615px;
	}
	.column-100 {
		flex: 100%;
		padding: 0;
	}
	.column-80 {
		flex: 100%;
		padding: 0;
	}
	.column-60 {
		flex: 100%;
		padding: 0;
	}
	.column-40 {
		flex: 100%;
		padding: 0;
	}
	.column-20 {
		flex: 100%;
		padding: 0;
	}
	.hide,
	.attribution {
		display: none;
	}
	.desktop {
		display: inline;
	}
	table {
		padding-top: 50px;
		padding-bottom: 40px;
	}
	td {
		padding-right: 40px;
	}
	hr.large {
		margin: 30px 0 30px 0;
	}
}

@media only screen and (max-width: 320px) {
	h1 {
		font-size: 56px;
		line-height: 66px;
	}
	h2 {
		font-size: 18px;
		line-height: 24px;
	}
}

/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
	display: block;
	border: 0;
	text-indent: -999em;
	overflow: hidden;
	background-color: transparent;
	background-repeat: no-repeat;
	text-align: left;
	direction: ltr;
	*line-height: 0;
}
.ir br {
	display: none;
}

/* Hide from both screenreaders and browsers */
.hidden {
	display: none !important;
	visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

/* Hide visually and from screenreaders, but maintain layout */
.invisible {
	visibility: hidden;
}

/* Contain floats: h5bp.com/q */
.clearfix:before,
.clearfix:after {
	content: "";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
	*zoom: 1;
}

/* ==|== print styles =======================================================
   Print styles.
   Inlined to avoid required HTTP connection
   ========================================================================== */

@media print {
	* {
		background: transparent !important;
		color: black !important;
		box-shadow: none !important;
		text-shadow: none !important;
		filter: none !important;
		-ms-filter: none !important;
	} /* Black prints faster: h5bp.com/s */
	a,
	a:visited {
		text-decoration: underline;
	}
	a[href]:after {
		content: " (" attr(href) ")";
	}
	abbr[title]:after {
		content: " (" attr(title) ")";
	}
	.ir a:after,
	a[href^="javascript:"]:after,
	a[href^="#"]:after {
		content: "";
	} /* Don't show links for images, or javascript/internal links */
	pre,
	blockquote {
		border: 1px solid #999;
		page-break-inside: avoid;
	}
	thead {
		display: table-header-group;
	}
	tr,
	img {
		page-break-inside: avoid;
	}
	img {
		max-width: 100% !important;
	}
	@page {
		margin: 0.5cm;
	}
	p,
	h2,
	h3 {
		orphans: 3;
		widows: 3;
	}
	h2,
	h3 {
		page-break-after: avoid;
	}
}

/* ==|== font styles =====================================================
   Fonts: Söhne by Klim Type Foundry
   ========================================================================== */

/* Light | Leicht */
@font-face {
	font-family: "Söhne";
	font-style: normal;
	font-weight: 300;
	font-display: block;
	src: url("/filing/fonts/soehne-leicht.woff2") format("woff2");
}

/* Regular | Buch */
@font-face {
	font-family: "Söhne";
	font-style: normal;
	font-weight: 400;
	font-display: block;
	src: url("/filing/fonts/soehne-buch.woff2") format("woff2");
}

/* Bold | Dreiviertelfett */
@font-face {
	font-family: "Söhne";
	font-style: normal;
	font-weight: 700;
	font-display: block;
	src: url("/filing/fonts/soehne-dreiviertelfett.woff2") format("woff2");
}
/* ... */

